--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">MyMediaPlayer</string>
     <string name="title">Playlist maker</string>
-    <string name="media_name">Медиатека</string>
-    <string name="find_name">Поиск</string>
-    <string name="settings">Настройки</string>
-    <string name="dark_mode">Тёмная тема</string>
-    <string name="app_share">Поделиться приложением</string>
-    <string name="support_apply">Написать в поддержку</string>
-    <string name="user_agreement">Пользовательское соглашение</string>
+    <string name="media_name">Media library</string>
+    <string name="find_name">Search</string>
+    <string name="settings">Settings</string>
+    <string name="dark_mode">Dark theme</string>
+    <string name="app_share">Share the app</string>
+    <string name="support_apply">Write to support</string>
+    <string name="user_agreement">User agreement</string>
 </resources>
