MyMediaPlayer Sprint9 homework (include Styles,SwitchCompat,DarkMode,Strings (en and ru), and Clicker on buttons: share_app,support and user_agreement),change SearchActivity (EditText and TextWatcher)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,8 +4,10 @@
     <string name="media_name">Медиатека</string>
     <string name="find_name">Поиск</string>
     <string name="settings">Настройки</string>
+    <string name="searching">Поиск</string>
     <string name="dark_mode">Тёмная тема</string>
     <string name="app_share">Поделиться приложением</string>
     <string name="support_apply">Написать в поддержку</string>
     <string name="user_agreement">Пользовательское соглашение</string>
+    <string name="input_hint">Поиск</string>
 </resources>
