--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="media_name">Media library</string>
     <string name="find_name">Search</string>
     <string name="settings">Settings</string>
+    <string name="searching">Searching</string>
     <string name="dark_mode">Dark theme</string>
     <string name="app_share">Share the app</string>
     <string name="support_apply">Write to support</string>
     <string name="user_agreement">User agreement</string>
+    <string name="input_hint">Search</string>
 </resources>
