MyMediaPlayer Sprint9 homework (work has been done on the comments received).Corrections have been made to the code and xml files.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,8 @@
     <string name="support_apply">Написать в поддержку</string>
     <string name="user_agreement">Пользовательское соглашение</string>
     <string name="input_hint">Поиск</string>
+    <string name="message_share_app">"https://practicum.yandex.ru/profile/android-developer/"</string>
+    <string name="messageSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="messageSupportTheme">Сообщение разработчикам и разработчикам приложения PlaylistMaker</string>
+    <string name="user_agreement_address">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
