--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,5 +15,9 @@
     <string name="messageSupportTheme">Сообщение разработчикам и разработчикам приложения PlaylistMaker</string>
     <string name="user_agreement_address">https://yandex.ru/legal/practicum_offer/</string>
     <string name="nothing_found">Ничего не нашлось</string>
-    <string name="something_went_wrong">Проблемы со связью\n Загрузка не удалась. Проверьте подключение к Интернет.</string>
+    <string name="something_went_wrong">
+        Проблемы со связью \n\n
+        Загрузка не удалась. Проверьте подключение к Интернет.
+    </string>
+    <string name="update">Обновить</string>
 </resources>
