Sprint 12 HomeWork Initial ver.1 (included Dark or Light Switcher, added UO Tracks searching history,Clear method for tracks, saved tracks into SharePreferences)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,4 +20,6 @@
         Загрузка не удалась. Проверьте подключение к Интернет.
     </string>
     <string name="update">Обновить</string>
+    <string name="youSearched">Вы искали</string>
+    <string name="clearHistory">Очистить историю</string>
 </resources>
