--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,4 +22,9 @@
     <string name="update">Обновить</string>
     <string name="youSearched">Вы искали</string>
     <string name="clearHistory">Очистить историю</string>
+    <string name="cover_image"></string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
+    <string name="add_to_favorite">Добавить в избранное</string>
+    <string name="play">Прослушать трек</string>
+    <string name="playing_time">00:30</string>
 </resources>
