--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,9 @@
     <string name="update">Update</string>
     <string name="youSearched">You are searched</string>
     <string name="clearHistory">Clear history</string>
-
+    <string name="cover_image"></string>
+    <string name="add_to_playlist">Add to playlist</string>
+    <string name="add_to_favorite">Add to favorite</string>
+    <string name="play">Play track</string>
+    <string name="playing_time">00:30</string>
 </resources>
