--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,5 +26,11 @@
     <string name="add_to_playlist">Добавить в плейлист</string>
     <string name="add_to_favorite">Добавить в избранное</string>
     <string name="play">Прослушать трек</string>
-    <string name="playing_time">00:30</string>
+    <string name="playing_time">0:30</string>
+    <string name="track_time">Длительность</string>
+    <string name="album">Альбом</string>
+    <string name="year">Год</string>
+    <string name="genre">Жанр</string>
+    <string name="country">Страна</string>
+
 </resources>
