--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,10 @@
     <string name="add_to_playlist">Add to playlist</string>
     <string name="add_to_favorite">Add to favorite</string>
     <string name="play">Play track</string>
-    <string name="playing_time">00:30</string>
+    <string name="playing_time">0:30</string>
+    <string name="track_time">Playing time</string>
+    <string name="album">Album</string>
+    <string name="year">Year</string>
+    <string name="genre">Genere</string>
+    <string name="country">Country</string>
 </resources>
